# python-project-50

./: .coverage  .gitignore  Makefile  README.md  coverage.xml  pyproject.toml
.github/workflows/: tests.yml
gendiff/: __init__.py  cli.py  cli_parse.py  gen_diff.py  gendiff.py  generate_diff.py  get_data.py  get_diff.py  parser.py
gendiff/formatters/: json_.py  plain.py  stylish.py  value_foramatters.py
gendiff/scripts/: gendiff.py
gendiff/tests/: .coverage  coverage.xml  test_gendiff.py
gendiff_app/: main.py
gendiff_app/scripts/: generate_diff.py
gendiff_app/tests/: test_gendiff.py
tests/: test_gendiff.py
tests/fixtures/: json_result.txt
